--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,20 @@
-
 # Minimum required CMake version
 cmake_minimum_required(VERSION 3.10)
 
 # Project name and language
 project(EscapeRoom_TextGame CXX)
 
-# Set C++ standard (optional)
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# Include directories
+include_directories(include)
 
 # Add executable target
 add_executable(EscapeRoom_TextGame
     src/main.cpp
-    src/Room.h
     src/Room.cpp
-    src/Item.h
     src/Item.cpp
 )
 
